Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-4133

Non-responsive peer in federated link can result in entire cluster shutdown

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.12
    • None
    • C++ Clustering
    • None

    Description

      If a federated link is established to a source broker that is slow to respond with the AMQP handshake, the destination broker cluster will shutdown with an "Unknown connection" error.

      Exception constructed: Unknown connection: Frame[BEbe; channel=0;

      {ClusterConnectionDeliverDoOutputBody: limit=2048; }

      ] control 2.0.0.0:22138-14 (qpid/cluster/Cluster.cpp:542)

      Steps to Reproduce:

      1. Configure a clustered broker
      2. Start netcat in listen mode (nc -l 6000)
      3. Add a route between the clustered broker and nc (qpid-route queue add localhost:5672 localhost:6000 amq.fanout foo)
      4. Clustered broker shuts down

      Attachments

        1. jira-4133.patch
          0.6 kB
          Jason Dillaman

        Activity

          People

            aconway Alan Conway
            dillaman Jason Dillaman
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: