QPID-4133: (Jason Dillaman) Non-responsive peer in federated link can result in entire cluster shutdown

Fix is to not start link processing until the connection is open.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1361321 13f79535-47bb-0310-9956-ffa450edef68